--- a/style/style.css
+++ b/style/style.css
@@ -240,6 +240,15 @@ body {
   z-index: -1;
 }
 
+.hero-img .main-hero-img {
+    transition: transform 0.4s ease-in-out;
+  }
+  
+  .hero-img:hover .main-hero-img {
+    transform: scale(2.1); /* Zoom in by 10% */
+  }
+  
+
 .social-container {
   display: flex;
   justify-content: center;
@@ -252,6 +261,14 @@ body {
   align-items: center;
   gap: var(--gap-small);
 }
+
+.social-icons img {
+    transition: transform 0.3s ease-in-out;
+  }
+  
+  .social-icons img:hover {
+    transform: scale(1.2); /* Zoom in by 20% */
+  }
 
 .bottom-section {
   padding: var(--padding-large);
